    
24. In 8.31, (*COMMIT) was confined to within a recursive subpattern. Perl also 
    confines (*SKIP) and (*PRUNE) in the same way, and this has now been done.

25. (*PRUNE) is now supported by the JIT compiler.

26. Fix infinite loop when /(?<=(*SKIP)ac)a/ is matched against aa.

27. Fix the case where there are two or more SKIPs with arguments that may be 
    ignored. 

28. Experimental support of (*SKIP) backtracking verb in the JIT compiler.

29. Experimental support of (*THEN) backtracking verb in the JIT compiler.

30. Update RunTest with additional test selector options.

31. The way PCRE handles backtracking verbs has been changed in to ways.

    (1) Previously, in something like (*COMMIT)(*SKIP), COMMIT would override
    SKIP. Now, PCRE acts on whichever backtracking verb is reached first by
    backtracking. In some cases this makes it more Perl-compatible, but Perl's
    rather obscure rules do not always do the same thing.
    
    (2) Previously, backtracking verbs were confined within assertions. This is 
    no longer the case, except for (*ACCEPT). Again, this sometimes improves
    Perl compatibility, and sometimes does not.
    
32. A number of tests that were in test 2 because Perl did things differently 
    have been moved to test 1, because either Perl or PCRE has changed, and 
    these tests are now compatible.


Version 8.32 30-November-2012
-----------------------------

1.  Improved JIT compiler optimizations for first character search and single
    character iterators.

2.  Supporting IBM XL C compilers for PPC architectures in the JIT compiler.
    Patch by Daniel Richard G.

3.  Single character iterator optimizations in the JIT compiler.

4.  Improved JIT compiler optimizations for character ranges.

5.  Rename the "leave" variable names to "quit" to improve WinCE compatibility.
    Reported by Giuseppe D'Angelo.

6.  The PCRE_STARTLINE bit, indicating that a match can occur only at the start